[package]
name = "lazylink"
description = "Convert extern fn to libdl call procedural macro."
version = "0.1.2-dev"
authors = ["yskszk63 <yskszk63@gmail.com>"]
categories = ["development-tools::ffi", "os::unix-apis"]
readme = "../README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yskszk63/lazylink"
autoexamples = false
autotests = false

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
lazylink-macro = { path = "macro", version = "0.1.2-dev" }
libloading = "0.7"

[dev-dependencies]
trybuild = "1.0"

[workspace]
members = [
    "macro",
    "examples",
]
